remove "white-space: nowrap" from style.css to avoid too wide html pages in large munin installations with lots of domains/hosts (Closes: Debian # #500080)
git-svn-id: svn://munin-monitoring.org/munin/branches/1.2-stable@1799 47311dc8-50f3-0310-b975-824c5c5ab7df

--- a/server/style.css
+++ b/server/style.css
@@ -60,7 +60,6 @@ table.largeinvisiblebox {
         border-style: solid;
         padding: 0px 0px 0px 0px;
 	margin: 0px 0px 0px 0px;
-	white-space: nowrap;
 	max-width: 90%;
         width: 80%;
 }
@@ -75,7 +74,6 @@ table.invisiblebox {
         border-style: solid;
         padding: 0px 0px 0px 0px;
 	margin: 0px 0px 0px 0px;
-	white-space: nowrap;
 	width: 1%;
 }
 
@@ -89,7 +87,6 @@ td.graphbox {
         border-style: solid;
         padding: 4px 4px 4px 4px;
 	margin: 0px 0px 0px 0px;
-	white-space: nowrap;
 	width: 100%;
 }
 
